ensure we keep the tab order on session restore

BUG: 495419