apps/lib/autotests/kate_view_mgmt_test2.cpp
@@ -34,7 +34,9 @@ public:
     KateViewManagementTest2(QObject *parent = nullptr);
 
 private Q_SLOTS:
+    void init();
     void testViewCursorPositionIsRestored();
+    void testTabsKeepOrderOnRestore();
 
 private:
     std::unique_ptr<QTemporaryDir> m_tempdir;
@@ -46,15 +48,18 @@ KateViewManagementTest2::KateViewManagementTest2(QObject *)
     // ensure ui file can be found and the translation domain is set to avoid warnings
     qApp->setApplicationName(QStringLiteral("kate"));
     KLocalizedString::setApplicationDomain(QByteArrayLiteral("kate"));
+}
 
+void KateViewManagementTest2::init()
+{
     m_tempdir = std::make_unique<QTemporaryDir>();
     QVERIFY(m_tempdir->isValid());
 
     // ensure we use some dummy config
     KConfig::setMainConfigName(m_tempdir->path() + QStringLiteral("/testconfigfilerc"));
 
-    // create KWrite variant to avoid plugin loading!
     static QCommandLineParser parser;
+    app.reset(); // needed as KateApp mimics a singleton
     app = std::make_unique<KateApp>(parser, KateApp::ApplicationKate, m_tempdir->path());
 }
 
@@ -87,6 +92,48 @@ void KateViewManagementTest2::testViewCursorPositionIsRestored()
     v = mw->openUrl(QUrl::fromLocalFile(f1.fileName()));
     QCOMPARE(v->document()->text(), text);
     QCOMPARE(v->cursorPosition(), expectedPos);
+}
+
+void KateViewManagementTest2::testTabsKeepOrderOnRestore()
+{
+    // test that the tabs keep their order on restore
+
+    // use new test session
+    app->sessionManager()->activateSession(QStringLiteral("testTabsKeepOrderOnRestore"), false, true);
+    KateMainWindow *mw = app->activeKateMainWindow();
+
+    // open two files aka tabs in order
+    auto tab1 = mw->openUrl(QUrl::fromLocalFile(QStringLiteral(":/kxmlgui5/kate/kateui.rc")));
+    auto tab2 = mw->openUrl(QUrl::fromLocalFile(QStringLiteral(":/kxmlgui5/kwrite/kateui.rc")));
+    const auto file1 = tab1->document()->url();
+    const auto file2 = tab2->document()->url();
+
+    // check tab order, we need try compare for delayed initial doc closing
+    QTRY_COMPARE(mw->viewManager()->activeViewSpace()->documentList().size(), 2);
+    auto tabs = mw->viewManager()->activeViewSpace()->documentList();
+    QCOMPARE(tabs.at(0).doc()->url(), file1);
+    QCOMPARE(tabs.at(1).doc()->url(), file2);
+
+    // trigger that the LRU order is no longer the tab order
+    mw->activateView(tab1->document());
+
+    // save the session
+    app->sessionManager()->saveActiveSession();
+
+    // open new empty session
+    app->sessionManager()->sessionNew();
+    mw = app->activeKateMainWindow();
+    QTRY_COMPARE(mw->viewManager()->activeViewSpace()->documentList().size(), 1);
+
+    // back to our session
+    app->sessionManager()->activateSession(QStringLiteral("testTabsKeepOrderOnRestore"));
+    mw = app->activeKateMainWindow();
+
+    // tabs shall have right order, not the LRU one
+    QTRY_COMPARE(mw->viewManager()->activeViewSpace()->documentList().size(), 2);
+    tabs = mw->viewManager()->activeViewSpace()->documentList();
+    QCOMPARE(tabs.at(0).doc()->url(), file1);
+    QCOMPARE(tabs.at(1).doc()->url(), file2);
 }
 
 QTEST_MAIN(KateViewManagementTest2)
